# libstep

./: .gitignore  Express.hs  Main.hs  README.md  libstep.cabal  types-with-usage.dot  types-without-usage.dot
include/: entity.hpp
src/: Step.hs
src/Data/: EXPRESS.hs  STEP.hs
src/Data/EXPRESS/: Parsers.hs  Schema.hs
src/Data/EXPRESS/Internal/: Parsers.hs
src/Data/STEP/: Parsers.hs
test/: Main.hs  test.hs
test/data/: empty.exp  reference_clause.exp  use_clause.exp  version_id.exp
